正常显示superset图形